--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,9 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "codecvt": "cpp",
+        "cwctype": "cpp",
+        "numbers": "cpp"
     }
 }
