Still need to work on physics.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
         "xutility": "cpp",
         "codecvt": "cpp",
         "cwctype": "cpp",
-        "numbers": "cpp"
+        "numbers": "cpp",
+        "*.tcc": "cpp"
     }
 }
