Collision works. Not sure if there are any other bugs. No extensive testing done.

--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -58,6 +58,7 @@ set(Header_Files
     "Source/Physics/PhysicsSystem.h"
     "Source/Physics/PhysicsComponent.h"
     "Source/Physics/Quadtree.h"
+    "Source/Physics/Collision2D.h"
 
 )
 source_group("Header Files" FILES ${Header_Files})
