--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -50,6 +50,7 @@ set(Header_Files
     "Source/ECS/Systems/RenderSystem.h"
     "Source/ECS/Systems/PlayerSystem.h"
     "Source/ECS/Systems/GameSystem.h"
+    "Source/ECS/Systems/GUISystem.h"
 
     "Source/Utils/Input.h"
     "Source/Utils/Util.h"
@@ -101,6 +102,7 @@ set(Source_Files
     "Source/ECS/Systems/RenderSystem.cpp"
     "Source/ECS/Systems/PlayerSystem.cpp"
     "Source/ECS/Systems/GameSystem.cpp"
+    "Source/ECS/Systems/GUISystem.cpp"
 
     "Source/Utils/Input.cpp"
 
