Ready to submit

--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -92,7 +92,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)vendor\glad\include;$(ProjectDir)\Source\;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\assimp\include;$(SolutionDir)vendor\glfw\include;$(SolutionDir)\Common\Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)vendor\rapidcsv;$(SolutionDir)vendor\imgui\imgui;$(SolutionDir)vendor\glad\include;$(ProjectDir)\Source\;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\assimp\include;$(SolutionDir)vendor\glfw\include;$(SolutionDir)\Common\Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -109,7 +109,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NOMINMAX;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)vendor\glad\include;$(ProjectDir)\Source\;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\assimp\include;$(SolutionDir)vendor\glfw\include;$(SolutionDir)\Common\Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)vendor\imgui\imgui;$(SolutionDir)vendor\rapidcsv;$(SolutionDir)vendor\glad\include;$(ProjectDir)\Source\;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\assimp\include;$(SolutionDir)vendor\glfw\include;$(SolutionDir)\Common\Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -150,197 +150,103 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Components\Confetti.cpp" />
-    <ClCompile Include="Source\Components\Portal.cpp" />
-    <ClCompile Include="Source\Scene\LoadingScene.cpp" />
-    <ClCompile Include="Source\Scene\MainMenuScene.cpp" />
-    <ClCompile Include="Source\Scene\SceneManager.cpp" />
-    <ClCompile Include="Source\Components\BumperCarController.cpp" />
-    <ClCompile Include="Source\Components\CarouselMovement.cpp" />
-    <ClCompile Include="Source\Components\DebugMovement.cpp" />
-    <ClCompile Include="Source\Components\FinishPoint.cpp" />
-    <ClCompile Include="Source\Components\ForceDebug.cpp" />
-    <ClCompile Include="Source\Components\ClawMachineController.cpp" />
-    <ClCompile Include="Source\Components\ModelRenderer.cpp" />
-    <ClCompile Include="Source\Components\BoxCollider.cpp" />
-    <ClCompile Include="Source\Components\AABB.cpp" />
-    <ClCompile Include="Source\Components\AABB2D.cpp" />
-    <ClCompile Include="Source\Components\Ahri.cpp" />
-    <ClCompile Include="Source\Components\BoundingCircle.cpp" />
-    <ClCompile Include="Source\Components\BoundingSphere.cpp" />
-    <ClCompile Include="Source\Components\BoundingVolume.cpp" />
-    <ClCompile Include="Source\Components\BoundingVolume2D.cpp" />
-    <ClCompile Include="Source\Components\BoxCollider2D.cpp" />
-    <ClCompile Include="Source\Components\Camera.cpp" />
-    <ClCompile Include="Source\Components\CameraController.cpp" />
-    <ClCompile Include="Source\Components\CircleCollider2D.cpp" />
-    <ClCompile Include="Source\Components\Collider.cpp" />
-    <ClCompile Include="Source\Components\Collider2D.cpp" />
-    <ClCompile Include="Source\Components\Component.cpp" />
-    <ClCompile Include="Source\Components\CoveringRock.cpp" />
-    <ClCompile Include="Source\Components\Droppable.cpp" />
-    <ClCompile Include="Source\Components\Interactable.cpp" />
-    <ClCompile Include="Source\Components\InteractButton.cpp" />
-    <ClCompile Include="Source\Components\Light.cpp" />
-    <ClCompile Include="Source\Components\MeshFilter.cpp" />
-    <ClCompile Include="Source\Components\MeshRenderer.cpp" />
-    <ClCompile Include="Source\Components\OBB2D.cpp" />
-    <ClCompile Include="Source\Components\PanningCameraController.cpp" />
-    <ClCompile Include="Source\Components\PlayerCameraController.cpp" />
-    <ClCompile Include="Source\Components\PlayerController.cpp" />
-    <ClCompile Include="Source\Components\PlayerMovement.cpp" />
-    <ClCompile Include="Source\Components\PolygonCollider2D.cpp" />
-    <ClCompile Include="Source\Components\Ray.cpp" />
-    <ClCompile Include="Source\Components\RayVolume.cpp" />
-    <ClCompile Include="Source\Components\Renderer.cpp" />
-    <ClCompile Include="Source\Components\RigidBody.cpp" />
-    <ClCompile Include="Source\Components\RigidBody2D.cpp" />
-    <ClCompile Include="Source\Components\Skybox.cpp" />
-    <ClCompile Include="Source\Components\SphereCollider.cpp" />
-    <ClCompile Include="Source\Components\SpotlightController.cpp" />
-    <ClCompile Include="Source\Components\Talkable.cpp" />
-    <ClCompile Include="Source\Components\Terrain.cpp" />
-    <ClCompile Include="Source\Components\TerrainCollider.cpp" />
-    <ClCompile Include="Source\Components\TerrainVolume.cpp" />
-    <ClCompile Include="Source\Components\Text.cpp" />
-    <ClCompile Include="Source\Components\ThrowableRock.cpp" />
-    <ClCompile Include="Source\Components\Transform.cpp" />
-    <ClCompile Include="Source\Components\UIRenderer.cpp" />
+    <ClCompile Include="..\vendor\imgui\imgui\examples\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="..\vendor\imgui\imgui\imgui.cpp" />
+    <ClCompile Include="..\vendor\imgui\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\vendor\imgui\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\vendor\imgui\imgui\imgui_tables.cpp" />
+    <ClCompile Include="..\vendor\imgui\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Source\Core\Application.cpp" />
     <ClCompile Include="Source\Core\Layer.cpp" />
     <ClCompile Include="Source\Core\LayerStack.cpp" />
     <ClCompile Include="Source\Core\Log.cpp" />
     <ClCompile Include="Source\Core\Window.cpp" />
+    <ClCompile Include="Source\ECS\Coordinator.cpp" />
+    <ClCompile Include="Source\ECS\Entity.cpp" />
+    <ClCompile Include="Source\ECS\Systems\GameSystem.cpp" />
+    <ClCompile Include="Source\ECS\Systems\GUISystem.cpp" />
+    <ClCompile Include="Source\ECS\Systems\PlayerSystem.cpp" />
+    <ClCompile Include="Source\ECS\Systems\RenderSystem.cpp" />
+    <ClCompile Include="Source\Game\GameManager.cpp" />
+    <ClCompile Include="Source\Game\MainLayer.cpp" />
+    <ClCompile Include="Source\Game\MenuLayer.cpp" />
+    <ClCompile Include="Source\Game\OrthographicCameraController.cpp" />
+    <ClCompile Include="Source\Game\Tilemap.cpp" />
     <ClCompile Include="Source\glad.c" />
-    <ClCompile Include="Source\Physics\ColliderManager.cpp" />
-    <ClCompile Include="Source\Physics\Collision.cpp" />
-    <ClCompile Include="Source\Physics\Collision2D.cpp" />
-    <ClCompile Include="Source\Physics\Contact.cpp" />
-    <ClCompile Include="Source\Renderer\Material.cpp" />
-    <ClCompile Include="Source\Renderer\Mesh.cpp" />
-    <ClCompile Include="Source\Renderer\MeshBuilder.cpp" />
-    <ClCompile Include="Source\Renderer\SceneRenderer.cpp" />
+    <ClCompile Include="Source\ImGui\ImGuiLayer.cpp" />
+    <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\Physics\PhysicsComponent.cpp" />
+    <ClCompile Include="Source\Physics\PhysicsSystem.cpp" />
+    <ClCompile Include="Source\Physics\Quadtree.cpp" />
+    <ClCompile Include="Source\Renderer\Buffer.cpp" />
+    <ClCompile Include="Source\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="Source\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="Source\Renderer\Renderer2D.cpp" />
     <ClCompile Include="Source\Renderer\Shader.cpp" />
     <ClCompile Include="Source\Renderer\ShaderLibrary.cpp" />
+    <ClCompile Include="Source\Renderer\SubTexture2D.cpp" />
     <ClCompile Include="Source\Renderer\Texture.cpp" />
-    <ClCompile Include="Source\Renderer\UniformBuffer.cpp" />
-    <ClCompile Include="Source\Scene\BottleThrowScene.cpp" />
-    <ClCompile Include="Source\Scene\BumperCarScene.cpp" />
-    <ClCompile Include="Source\Scene\DebugScene.cpp" />
-    <ClCompile Include="Source\Scene\ArcadeScene.cpp" />
-    <ClCompile Include="Source\Scene\GameObject.cpp" />
-    <ClCompile Include="Source\Scene\JungleScene.cpp" />
-    <ClCompile Include="Source\main.cpp" />
-    <ClCompile Include="Source\Scene\MainScene.cpp" />
-    <ClCompile Include="Source\Scene\PoolTableScene.cpp" />
-    <ClCompile Include="Source\Scene\SceneLayer.cpp" />
-    <ClCompile Include="Source\Utils\Font.cpp" />
+    <ClCompile Include="Source\Renderer\VertexArray.cpp" />
+    <ClCompile Include="Source\Scene\Scene.cpp" />
+    <ClCompile Include="Source\Scene\SceneManager.cpp" />
     <ClCompile Include="Source\Utils\Input.cpp" />
-    <ClCompile Include="Source\Utils\LoadOBJ.cpp" />
-    <ClCompile Include="Source\Utils\LoadTGA.cpp" />
-    <ClCompile Include="Source\Components\StallFloor.cpp" />
-    <ClCompile Include="Source\Utils\TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Components\Confetti.h" />
-    <ClInclude Include="Source\Components\Portal.h" />
-    <ClInclude Include="Source\Scene\LoadingScene.h" />
-    <ClInclude Include="Source\Scene\MainMenuScene.h" />
-    <ClInclude Include="Source\Scene\SceneManager.h" />
-    <ClInclude Include="Source\Components\BumperCarController.h" />
-    <ClInclude Include="Source\Components\CarouselMovement.h" />
-    <ClInclude Include="Source\Components\DebugMovement.h" />
-    <ClInclude Include="Source\Components\FinishPoint.h" />
-    <ClInclude Include="Source\Components\ForceDebug.h" />
-    <ClInclude Include="Source\Components\ClawMachineController.h" />
-    <ClInclude Include="Source\Components\ModelRenderer.h" />
-    <ClInclude Include="Source\Components\BoxCollider.h" />
-    <ClInclude Include="Source\Components\AABB.h" />
-    <ClInclude Include="Source\Components\AABB2D.h" />
-    <ClInclude Include="Source\Components\Ahri.h" />
-    <ClInclude Include="Source\Components\BoundingCircle.h" />
-    <ClInclude Include="Source\Components\BoundingSphere.h" />
-    <ClInclude Include="Source\Components\BoundingVolume.h" />
-    <ClInclude Include="Source\Components\BoundingVolume2D.h" />
-    <ClInclude Include="Source\Components\BoxCollider2D.h" />
-    <ClInclude Include="Source\Components\Camera.h" />
-    <ClInclude Include="Source\Components\CameraController.h" />
-    <ClInclude Include="Source\Components\CircleCollider2D.h" />
-    <ClInclude Include="Source\Components\Collider.h" />
-    <ClInclude Include="Source\Components\Collider2D.h" />
-    <ClInclude Include="Source\Components\Component.h" />
-    <ClInclude Include="Source\Components\CoveringRock.h" />
-    <ClInclude Include="Source\Components\Droppable.h" />
-    <ClInclude Include="Source\Components\Interactable.h" />
-    <ClInclude Include="Source\Components\InteractButton.h" />
-    <ClInclude Include="Source\Components\Light.h" />
-    <ClInclude Include="Source\Components\MeshFilter.h" />
-    <ClInclude Include="Source\Components\MeshRenderer.h" />
-    <ClInclude Include="Source\Components\OBB2D.h" />
-    <ClInclude Include="Source\Components\PanningCameraController.h" />
-    <ClInclude Include="Source\Components\PlayerCameraController.h" />
-    <ClInclude Include="Source\Components\PlayerController.h" />
-    <ClInclude Include="Source\Components\PlayerMovement.h" />
-    <ClInclude Include="Source\Components\PolygonCollider2D.h" />
-    <ClInclude Include="Source\Components\Ray.h" />
-    <ClInclude Include="Source\Components\RayVolume.h" />
-    <ClInclude Include="Source\Components\Renderer.h" />
-    <ClInclude Include="Source\Components\RigidBody.h" />
-    <ClInclude Include="Source\Components\RigidBody2D.h" />
-    <ClInclude Include="Source\Components\Skybox.h" />
-    <ClInclude Include="Source\Components\SphereCollider.h" />
-    <ClInclude Include="Source\Components\SpotlightController.h" />
-    <ClInclude Include="Source\Components\Talkable.h" />
-    <ClInclude Include="Source\Components\Terrain.h" />
-    <ClInclude Include="Source\Components\TerrainCollider.h" />
-    <ClInclude Include="Source\Components\TerrainVolume.h" />
-    <ClInclude Include="Source\Components\Text.h" />
-    <ClInclude Include="Source\Components\ThrowableRock.h" />
-    <ClInclude Include="Source\Components\Transform.h" />
-    <ClInclude Include="Source\Components\UIRenderer.h" />
+    <ClInclude Include="..\vendor\imgui\imgui\imconfig.h" />
+    <ClInclude Include="..\vendor\imgui\imgui\imgui.h" />
+    <ClInclude Include="..\vendor\imgui\imgui\imgui_internal.h" />
+    <ClInclude Include="..\vendor\imgui\imgui\imstb_rectpack.h" />
+    <ClInclude Include="..\vendor\imgui\imgui\imstb_textedit.h" />
+    <ClInclude Include="..\vendor\imgui\imgui\imstb_truetype.h" />
     <ClInclude Include="Source\Core\Application.h" />
     <ClInclude Include="Source\Core\Core.h" />
+    <ClInclude Include="Source\Core\KeyCodes.h" />
     <ClInclude Include="Source\Core\Layer.h" />
     <ClInclude Include="Source\Core\LayerStack.h" />
     <ClInclude Include="Source\Core\Log.h" />
     <ClInclude Include="Source\Core\Timestep.h" />
     <ClInclude Include="Source\Core\Window.h" />
+    <ClInclude Include="Source\ECS\Component.h" />
+    <ClInclude Include="Source\ECS\ComponentArray.h" />
+    <ClInclude Include="Source\ECS\ComponentManager.h" />
+    <ClInclude Include="Source\ECS\Coordinator.h" />
+    <ClInclude Include="Source\ECS\Entity.h" />
+    <ClInclude Include="Source\ECS\IComponentArray.h" />
+    <ClInclude Include="Source\ECS\System.h" />
+    <ClInclude Include="Source\ECS\SystemManager.h" />
+    <ClInclude Include="Source\ECS\Systems\GameSystem.h" />
+    <ClInclude Include="Source\ECS\Systems\GUISystem.h" />
+    <ClInclude Include="Source\ECS\Systems\PlayerSystem.h" />
+    <ClInclude Include="Source\ECS\Systems\RenderSystem.h" />
     <ClInclude Include="Source\Events\ApplicationEvent.h" />
     <ClInclude Include="Source\Events\Event.h" />
     <ClInclude Include="Source\Events\EventDispatcher.h" />
     <ClInclude Include="Source\Events\KeyEvent.h" />
     <ClInclude Include="Source\Events\MouseEvent.h" />
-    <ClInclude Include="Source\Physics\ColliderManager.h" />
-    <ClInclude Include="Source\Physics\Collision.h" />
+    <ClInclude Include="Source\Game\GameManager.h" />
+    <ClInclude Include="Source\Game\MainLayer.h" />
+    <ClInclude Include="Source\Game\MenuLayer.h" />
+    <ClInclude Include="Source\Game\OrthographicCameraController.h" />
+    <ClInclude Include="Source\Game\Tilemap.h" />
+    <ClInclude Include="Source\ImGui\ImGuiLayer.h" />
     <ClInclude Include="Source\Physics\Collision2D.h" />
-    <ClInclude Include="Source\Physics\Contact.h" />
-    <ClInclude Include="Source\Renderer\Material.h" />
-    <ClInclude Include="Source\Renderer\Mesh.h" />
-    <ClInclude Include="Source\Renderer\MeshBuilder.h" />
-    <ClInclude Include="Source\Renderer\SceneRenderer.h" />
+    <ClInclude Include="Source\Physics\PhysicsComponent.h" />
+    <ClInclude Include="Source\Physics\PhysicsSystem.h" />
+    <ClInclude Include="Source\Physics\Quadtree.h" />
+    <ClInclude Include="Source\Renderer\Buffer.h" />
+    <ClInclude Include="Source\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="Source\Renderer\RenderCommand.h" />
+    <ClInclude Include="Source\Renderer\Renderer2D.h" />
     <ClInclude Include="Source\Renderer\Shader.h" />
-    <ClInclude Include="Source\Renderer\shader.hpp" />
     <ClInclude Include="Source\Renderer\ShaderLibrary.h" />
+    <ClInclude Include="Source\Renderer\SubTexture2D.h" />
     <ClInclude Include="Source\Renderer\Texture.h" />
-    <ClInclude Include="Source\Renderer\UniformBuffer.h" />
-    <ClInclude Include="Source\Scene\BottleThrowScene.h" />
-    <ClInclude Include="Source\Scene\BumperCarScene.h" />
-    <ClInclude Include="Source\Scene\DebugScene.h" />
-    <ClInclude Include="Source\Scene\ArcadeScene.h" />
-    <ClInclude Include="Source\Scene\GameObject.h" />
-    <ClInclude Include="Source\Scene\JungleScene.h" />
-    <ClInclude Include="Source\Scene\MainScene.h" />
-    <ClInclude Include="Source\Scene\PoolTableScene.h" />
+    <ClInclude Include="Source\Renderer\VertexArray.h" />
     <ClInclude Include="Source\Scene\Scene.h" />
-    <ClInclude Include="Source\Scene\SceneLayer.h" />
-    <ClInclude Include="Source\Utils\Font.h" />
+    <ClInclude Include="Source\Scene\SceneManager.h" />
     <ClInclude Include="Source\Utils\Input.h" />
-    <ClInclude Include="Source\Utils\LoadOBJ.h" />
-    <ClInclude Include="Source\Utils\LoadTGA.h" />
-    <ClInclude Include="Source\Utils\TextureManager.h" />
+    <ClInclude Include="Source\Utils\Singleton.h" />
     <ClInclude Include="Source\Utils\Util.h" />
-    <ClInclude Include="Source\Utils\Vertex.h" />
-    <ClInclude Include="Source\Components\StallFloor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
