--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "files.associations": {
-        "*.embeddedhtml": "html",
         "*.fragmentshader": "glsl",
         "*.vertexshader": "glsl",
+        "*.embeddedhtml": "html",
         "xstring": "cpp",
         "algorithm": "cpp",
         "array": "cpp",
@@ -81,6 +81,7 @@
         "cwctype": "cpp",
         "numbers": "cpp",
         "*.tcc": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "typeindex": "cpp"
     }
 }
