Renderer, Transform and Scene base done.

--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -6,6 +6,8 @@ set(PROJECT_NAME Application)
 set(Header_Files
     "Source/EC/GameObject.h"
     "Source/EC/Component.h"
+    "Source/EC/Components/Transform.h"
+    "Source/EC/Components/Renderer.h"
 
     "Source/Core/Application.h"
     "Source/Core/Core.h"
@@ -73,6 +75,8 @@ source_group("Header Files" FILES ${Header_Files})
 
 set(Source_Files
     "Source/EC/GameObject.cpp"
+    "Source/EC/Components/Transform.cpp"
+    "Source/EC/Components/Renderer.cpp"
 
     "Source/Core/Application.cpp"
     "Source/Core/Layer.cpp"
